Managing service using label

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.yml]
+insert_final_newline = false
+
 [*.md]
 trim_trailing_whitespace = false
