--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "Package management for Docker Swarm",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "test": "test",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "align-yaml": "^0.1.8",
     "command-line-args": "^5.0.2",
+    "cuid": "^2.1.4",
     "docker-service-api": "^17.12.19",
-    "js-yaml": "^3.12.1"
+    "js-yaml": "^3.12.1",
+    "lodash": "^4.17.11",
+    "nunjucks": "^3.1.7",
+    "pkg": "^4.3.7",
+    "shelljs": "^0.8.3",
+    "stream-to-string": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
