--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "type": "git",
     "url": "git+https://github.com/vudknguyen/swarm-pack.git"
   },
+  "bin": {
+    "swarm-pack": "./src/cli/pack.js"
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
