--- a/pack/docker-compose.tpl.yml
+++ b/pack/docker-compose.tpl.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
-{% include "pack/partial.yml" %}
+{% include "partial.yml" %}
       MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
       MYSQL_USER: {{ wordpressuser }}
@@ -16,7 +16,7 @@ services:
     image: wordpress:latest
     ports:
       - "8001:80"
-{% include "pack/partial.yml" %}
+{% include "partial.yml" %}
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: {{ wordpressuser }}
       WORDPRESS_DB_PASSWORD: {{ wordpresspassword }}
