--- a/pack/defaults.yml
+++ b/pack/defaults.yml
@@ -1,6 +1,17 @@
-wordpresspassword: testwordpress
-wordpressuser: wordpress
-array2:
-    key1: value1
-    key2: value2
-    key3: value3
+mysql:
+  image:
+    repository: mysql
+    tag: 5.7
+    tag_pattern: 5.7
+    auto: true
+  root_password: changemeroot
+
+wordpress:
+  image:
+    repository: wordpress
+    tag: latest
+    auto: true
+
+user: wp
+password: changeme
+database: wordpress
