Replaced secret_from_file and secret_from_string with secret_from_value. Removed secrets dir. All secrets read from values

--- a/pack/defaults.yml
+++ b/pack/defaults.yml
@@ -11,6 +11,12 @@ wordpress:
     repository: wordpress
     tag: latest
     auto: true
+  my_secret_data: |
+    this
+    is
+    a
+    multiline
+    secret
 
 user: wp
 password: changeme
