--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker-service-api": "^17.12.19",
     "dockerode": "^2.5.8",
     "fs-extra": "^7.0.1",
+    "is-url": "^1.2.4",
     "js-yaml": "^3.12.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
