--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "swarm-pack",
   "version": "1.0.0",
   "description": "Package management for Docker Swarm",
-  "main": "src/index.js",
+  "main": "src/module.js",
   "dependencies": {
     "align-yaml": "^0.1.8",
     "cli-table": "^0.3.1",
     "command-line-args": "^5.0.2",
     "commander": "^2.19.0",
     "cuid": "^2.1.4",
+    "deep-extend": "^0.6.0",
     "docker-service-api": "^17.12.19",
     "dockerode": "^2.5.8",
     "fs-extra": "^7.0.1",
