--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "docker-service-api": "^17.12.19",
     "dockerode": "^2.5.8",
     "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "i": "^0.3.6",
     "is-url": "^1.2.4",
     "js-yaml": "^3.12.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "npm": "^6.9.0",
     "nunjucks": "^3.1.7",
     "pkg": "^4.3.7",
     "shelljs": "^0.8.3",
@@ -47,7 +50,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vudknguyen/swarm-pack.git"
+    "url": "git+https://github.com/swarm-pack/swarm-pack.git"
   },
   "bin": {
     "swarm-pack": "./src/cli/pack.js"
@@ -55,7 +58,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vudknguyen/swarm-pack/issues"
+    "url": "https://github.com/swarm-pack/swarm-pack/issues"
   },
-  "homepage": "https://github.com/vudknguyen/swarm-pack#readme"
+  "homepage": "https://github.com/swarm-pack/swarm-pack#readme"
 }
