--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "dockerode": "^2.5.8",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
-    "i": "^0.3.6",
     "is-url": "^1.2.4",
     "js-yaml": "^3.12.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
-    "npm": "^6.9.0",
     "nunjucks": "^3.1.7",
     "pkg": "^4.3.7",
+    "sanitize-filename": "^1.6.1",
     "shelljs": "^0.8.3",
     "simple-git": "^1.107.0",
     "stream-to-string": "^1.2.0",
