--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker-service-api": "^17.12.19",
     "dockerode": "^2.5.8",
     "fs-extra": "^7.0.1",
+    "getenv": "^0.7.0",
     "glob": "^7.1.3",
     "is-url": "^1.2.4",
     "js-yaml": "^3.12.1",
