--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - checkout
       - run:
-        command: pwd && echo "\n\n" && ls -la
+          name: Debugging
+          command: pwd && echo "\n\n" && ls -la
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - restore_cache:
