--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,5 +53,7 @@ workflows:
           requires:
             - build
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v[0-9]+(\.[0-9]+)*$/
