--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ workflows:
   build_and_release:
     jobs:
       - build
+          filters:
+            tags:
+              only: /^v[0-9]+(\.[0-9]+)*$/
       - release:
           requires:
             - build
