--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
   version: 2
   build_and_release:
     jobs:
-      - build
+      - build:
           filters:
             tags:
               only: /^v.*/
