override values using --set or --values-file on deploy with CLI

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "rules": {
     "prettier/prettier": ["error"],
     "no-console": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    'no-plusplus': "off"
   }
 }
