--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/module.js",
   "dependencies": {
     "cli-table": "^0.3.1",
+    "co": "^4.6.0",
     "command-line-args": "^5.0.2",
     "commander": "^2.19.0",
     "cuid": "^2.1.4",
@@ -14,18 +15,26 @@
     "fs-extra": "^7.0.1",
     "getenv": "^0.7.0",
     "glob": "^7.1.3",
+    "got": "^9.6.0",
+    "gunzip-maybe": "^1.4.1",
     "inquirer": "^6.2.2",
     "is-url": "^1.2.4",
     "js-yaml": "^3.13.0",
+    "klaw": "^3.0.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "nexe": "^3.1.0",
     "nunjucks": "^3.1.7",
+    "object-hash": "^1.3.1",
     "pkg": "^4.3.7",
+    "rev-hash": "^3.0.0",
     "sanitize-filename": "^1.6.1",
+    "semver": "^6.2.0",
     "shelljs": "^0.8.3",
     "simple-git": "^1.107.0",
     "stream-to-string": "^1.2.0",
+    "tar": "^4.4.10",
+    "tar-stream": "^2.1.0",
     "tmp": "^0.0.33"
   },
   "devDependencies": {
